# RateMyMovie

./: .gitignore  README.md  config.env  pyproject.toml
datasets/csv/: count_3_encoded_action_movie_data.csv  count_4_encoded_action_movie_data.csv  count_5_encoded_action_movie_data.csv  filled_action_movie_data.csv  filtered_action_movie_data.csv  processed_action_movie_data.csv
datasets/pickle/: processed_action_movie_data.pkl
src/: data_encoding.ipynb  data_preprocessing.ipynb  eda.ipynb  feature_selection.ipynb  movie_data_scraping.py
src/models/: decision_trees.ipynb  gboost.ipynb  knn.ipynb  logistic_reg.ipynb  models.ipynb  naive_bayes.ipynb  random_forest.ipynb  utils.py
