[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "spenpal", email = "spenpal2000@gmail.com"},
]
dependencies = [
    "numpy>=1.24.3",
    "pandas>=2.0.1",
    "ipykernel>=6.22.0",
    "matplotlib>=3.7.1",
    "python-dotenv>=1.0.0",
    "requests>=2.30.0",
    "scikit-learn>=1.2.2",
    "seaborn>=0.12.2",
    "xgboost>=1.7.5",
    "category-encoders>=2.6.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
